--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v5
 
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -24,7 +24,7 @@ jobs:
         sudo mv /tmp/eksctl /usr/local/bin
 
     - name: Update Kubeconfig
-      run: eksctl utils write-kubeconfig --cluster my-cluster --region eu-east-2
+      run: eksctl utils write-kubeconfig --cluster my-cluster --region eu-west-3
 
     - name: Apply Kubernetes Manifests
       run: kubectl apply -f K8s/
